# CMock

./: CMakeLists.txt  CMockConfig.cmake
src/: CMakeLists.txt
